[fix] layout issue arise due to sticky navbar

--- a/src/components/cart/cart.css
+++ b/src/components/cart/cart.css
@@ -2,6 +2,7 @@
 .empty-cart-main {
   max-width: 1200px;
   margin: 1rem auto;
+  width: 100%;
 }
 
 .cart-details {
