--- a/src/components/wishlist/wishlist.css
+++ b/src/components/wishlist/wishlist.css
@@ -1,6 +1,7 @@
 .wishlist-main {
   max-width: 1200px;
-  margin: auto;
+  margin: 1rem auto;
+  width: 100%;
 }
 
 .wishlist-user-detail {
